--- a/src/k8s/theclient-service.yaml
+++ b/src/k8s/theclient-service.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: theclient
-  name: theclient
+  name: theclient-service
 spec:
   ports:
     - name: "6500"
       port: 6500
       targetPort: 80
   selector:
-    app: theclient
-status:
-  loadBalancer: {}
+    app: theclient-pod
+  type: LoadBalancer
+# //
