adding dbase functionality

--- a/src/annoying.client/appsettings.json
+++ b/src/annoying.client/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MainDb": "Server=(localdb)\\MSSQLLocalDB;Database=FootballDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "DBServer": "localhost",
+  "DBPort": "1433",
+  "DBDatabase": "FootballDb",
+  "DBUser": "SA",
+  "DBPassword": "6Tpeople"
 }
