--- a/src/annoying.client/annoying.client.csproj
+++ b/src/annoying.client/annoying.client.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12"/>
+    <PackageReference Include="Polly" Version="7.2.2"/>
   </ItemGroup>
 </Project>
