switching to postgres  from sql server

--- a/src/annoying.client/appsettings.json
+++ b/src/annoying.client/appsettings.json
@@ -7,12 +7,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MainDb": "Server=(localdb)\\MSSQLLocalDB;Database=FootballDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  // "ConnectionStrings": {
+  //   "MainDb": "Server=(localdb)\\MSSQLLocalDB;Database=FootballDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  // },
   "DBServer": "localhost",
-  "DBPort": "1433",
-  "DBDatabase": "FootballDb",
-  "DBUser": "SA",
-  "DBPassword": "6Tpeople"
+  "DBPort": "5432",
+  "DBDatabase": "footballdb",
+  "DBUser": "marcus",
+  "DBPassword": "password"
 }
