--- a/src/annoying.api/appsettings.json
+++ b/src/annoying.api/appsettings.json
@@ -7,5 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "FootballUri": "http://localhost:6515/"
+  "DBServer": "localhost",
+  "DBPort": "5432",
+  "DBDatabase": "footballdb",
+  "DBUser": "marcus",
+  "DBPassword": "password"
 }
