--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       POSTGRES_PASSWORD: "password"
     ports:
       - 5432:5432
-    # volumes:
-    #   - sqlserverdata:/var/opt/mssql
+    volumes:
+      - playerdata:/var/lib/postgresql
   theapi:
     image: squigs/annoyingapi:1.0
     container_name: theapi
@@ -40,6 +40,6 @@ services:
     depends_on:
       - theapi
 
-# volumes:
-#   sqlserverdata:
-#     external: true
+volumes:
+  playerdata:
+    external: true
