--- a/src/k8s_vols/thedb-deployment.yaml
+++ b/src/k8s_vols/thedb-deployment.yaml
@@ -35,5 +35,5 @@ spec:
       volumes:
         - name: playerdata
           persistentVolumeClaim:
-            claimName: playerdata
+            claimName: playerdata-claim
 status: {}
