adding gateway to docker. added docker appsettings nad moved env vars out of docker compose

--- a/src/annoying.api/appsettings.Docker.json
+++ b/src/annoying.api/appsettings.Docker.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  //"FootballUri": "http://localhost:6515/"
-  "FootballUri": "http://localhost:6520/f/"
+  "DBServer": "thedb",
+  "DBPort": "5432",
+  "DBDatabase": "footballdb",
+  "DBUser": "marcus",
+  "DBPassword": "password"
 }
