--- a/src/annoying.client/appsettings.Docker.json
+++ b/src/annoying.client/appsettings.Docker.json
@@ -8,5 +8,5 @@
   },
   "AllowedHosts": "*",
   //"FootballUri": "http://localhost:6515/"
-  "FootballUri": "http://localhost:6520/f/"
+  "FootballUri": "http://thegateway/f/"
 }
