adding gateway to k8s. Moved config from k8s and docker

--- a/src/k8s/theclient-deployment.yaml
+++ b/src/k8s/theclient-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - env:
-            - name: FootballUri
-              value: "http://theapi-service:7347/"
+            - name: ASPNETCORE_ENVIRONMENT
+              value: Kubernetes
           image: squigs/annoyingclient:1.0
           name: theclient-container
           ports:
